0.0.5
 - enh: allow to set image_cache_size in HDF5Data
0.0.4
 - feat: introduce HDF5 virtual dataset path concatenator
 - enh: allow to pass h5py.File object to HDF5Data
 - fix: typo in logging statement for sparse median bg computation
0.0.3
 - feat: introduce median background computation
 - feat: introduce data reader
 - feat: introduce thresholding segmenter
 - feat: introduce brightness, haralick texture, and moments-based features
0.0.2
 - first automated release
0.0.1
 - stub release