@@ -2,18 +2,15 @@
 import functools
 
 from .segmenter import Segmenter
-from .segm_thresh import SegmentThresh
+from .segmenter_cpu import CPUSegmenter
+from . import segm_thresh
 
 
 @functools.cache
-def get_segmentation_methods():
-    """Return dictionary of segmentation methods"""
-    global_dict = globals()
-    methods = {}
-    for key in global_dict:
-        if key == "Segmenter":
-            continue
-        if key.startswith("Segment"):
-            meth = global_dict[key]
-            methods[meth.key()] = meth
-    return methods
+def get_available_segmenters():
+    """Return dictionary of available segmenters"""
+    segmenters = {}
+    for scls in Segmenter.__subclasses__():
+        for cls in scls.__subclasses__():
+            segmenters[cls.key()] = cls
+    return segmenters
